--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.18.2",
 		"morgan": "^1.10.0",
-		"socket-io": "^1.0.0",
-		"socket.io": "^4.5.4",
-		"websocket": "^1.0.34",
-		"ws": "^8.11.0"
+		"socket.io": "^4.5.4"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.20"
